CHATS_SIT/force-app/main/default/objects/T_SLOT_CONTRACT__c.object
<CustomObject>
    <fields>
        <fullName>CDE_CARE_LEVEL__c</fullName>
        <label>Care Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Care_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_CARE_UNIT__c</fullName>
        <label>Care Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Care_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_COUNTY__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>Slot Contracts</relationshipLabel>
        <relationshipName>Slot_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDE_PRG_TYPE__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Program_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_RATE_TYPE__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rate_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNT_DAYS_OF_MONTH__c</fullName>
        <label># of days per month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CNT_DAYS_OF_WEEK__c</fullName>
        <label>Days of Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_SLOT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Slot Contract Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_SLOT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Slot Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_ADDENDUM__c</fullName>
        <label>Slot Contract Addendum</label>
        <referenceTo>T_SLOT_CONTRACT_ADDENDUM__c</referenceTo>
        <relationshipLabel>Slot Contracts</relationshipLabel>
        <relationshipName>Slot_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IDN_AUTH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorization ID</label>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipLabel>Slot Contracts</relationshipLabel>
        <relationshipName>Slot_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_PROVIDER__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider ID</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Slot Contracts</relationshipLabel>
        <relationshipName>Slot_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IND_AVAILABLE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_FUTURE_VACANT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Future Dated Vacant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_OCCUPIED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Occupied?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLOT_CONTRACT_DESCRIPTION__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Slot Contract Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Slot Contract</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slot Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>